--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,9 @@ services:
   discord-bot:
     build: .
     container_name: discord-music-bot
-    restart: always
-    working_dir: /app  # Match the Dockerfile's WORKDIR
+    restart: unless-stopped
     volumes:
       - .:/app  # Mount the project directory to /app
-      - ./logs:/app/logs  # Ensure logs are written to the host
+      - ./logs:/app/logs  # Keep logs accessible on the host
     env_file:
       - .env
