Update Dockerfile to ensure latest yt-dlp when building, add troubleshooting for audio stuttering, and update docker compose to use public image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   discord-bot:
-    build: .
+    image: estessj/discord-music-bot:latest
     container_name: discord-music-bot
     restart: unless-stopped
     volumes:
